[project]
authors = [
  {name = "Masoud Torabi", email = "trb.masood@live.com"},
]
dependencies = [
  "fastapi (>=0.119.1,<0.120.0)",
  "uvicorn[standard] (>=0.38.0,<0.39.0)",
  "pydantic (>=2.12.3,<3.0.0)",
  "celery[redis] (>=5.5.3,<6.0.0)",
  "python-dotenv (>=1.1.1,<2.0.0)",
  "flower (>=2.0.1,<3.0.0)",
  "requests-oauthlib (>=1.3.1,<2.0.0)",
  "tweepy (>=4.16.0,<5.0.0)",
]
description = ""
name = "add-whishlist"
readme = "README.md"
requires-python = ">=3.14"
version = "0.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

# Package mode configuration
[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
  "black",
  "ruff",
  "watchdog (>=6.0.0,<7.0.0)",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  "A", # flake8-builtins
  "COM", # flake8-commas
  "C4", # flake8-comprehensions
  "Q", # flake8-quotes
  "SIM", # flake8-simplify
  "PTH", # flake8-use-pathlib
  "I", # isort
  "N", # pep8-naming
  "UP", # pyupgrade
  "S", # bandit
]

ignore = [
  "S101", # assert usage (allow in tests)
  "S104", # hardcoded bind all interfaces
  "S603", # subprocess call
  "S607", # subprocess call with shell
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106", "S108"]

[tool.black]
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 88
target-version = ['py314']
